updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm the operations manager for my wife's art studios in San Diego. We teach fine art to children and adults ages 5 and up.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Columbus, Ohio</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Camping, family time, improving our business.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Currently have it as the operations manager. Just trying to improve the business by moving into the digital age with a modern webiste, where we can manage our studeant database.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Diego, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To move improve our website that we created almost 20 years ago using Frontpage. We want to manage our student database via our website as well.</p>
     </section>
 
     <footer id="footer">
